add update user profile functionality
